# KitevaGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  log.txt
engine/: CMakeLists.txt  main.cpp
engine/animation/: CMakeLists.txt
engine/audio/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/: core.h  ikgeobject.h  initializer.h  kgeobject.h
engine/core/include/application/: KGEAppData.h
engine/core/include/graphic/: GKEVulkanApp.h  KGEVulkan.h  KGEVulkanApp.h  KGEVulkanCore.h
engine/core/include/graphic/VulkanCoreModules/: KGECommandPool.h  KGEVkCommandBuffer.h  KGEVkCommandPool.h  KGEVkDescriptorPool.h  KGEVkDescriptorSet.h  KGEVkDescriptorSetLayout.h  KGEVkDevice.h  KGEVkGraphicsPipeline.h  KGEVkInstance.h  KGEVkPipelineLayout.h  KGEVkRenderPass.h  KGEVkReportCallBack.cpp  KGEVkReportCallBack.h  KGEVkSampler.h  KGEVkSurface.h  KGEVkSwapChain.h  KGEVkSynchronization.h  KGEVkUboModels.h  KGEVkUniformBufferModels.h  KGEVkUniformBufferWorld.h
engine/core/include/graphic/VulkanWindowControl/: GLFWWindowControl.h  IVulkanWindowControl.h  LinuxXCBWindowControl.h  MacOSWindowControl.h  WindowsWindowControl.h
engine/core/scr/: core.cpp  initializer.cpp
engine/core/scr/graphic/: GKEVulkanApp.cpp  KGEVulkan.cpp  KGEVulkanCore.cpp
engine/core/scr/graphic/VulkanWindowControl/: GLFWWindowControl.cpp  LinuxXCBWindowControl.cpp  MacOSWindowControl.cpp  WindowsWindowControl.cpp
engine/core/src/: core.cpp
engine/core/src/application/: KGEAppData.cpp
engine/core/src/graphic/: GKEVulkanApp.cpp  KGEVulkan.cpp  KGEVulkanApp.cpp  KGEVulkanCore.cpp
engine/core/src/graphic/VulkanCoreModules/: KGECommandPool.cpp  KGEVkCommandBuffer.cpp  KGEVkCommandPool.cpp  KGEVkDescriptorPool.cpp  KGEVkDescriptorSet.cpp  KGEVkDescriptorSetLayout.cpp  KGEVkDevice.cpp  KGEVkGraphicsPipeline.cpp  KGEVkInstance.cpp  KGEVkPipelineLayout.cpp  KGEVkRenderPass.cpp  KGEVkReportCallBack.cpp  KGEVkSampler.cpp  KGEVkSurface.cpp  KGEVkSwapChain.cpp  KGEVkSynchronization.cpp  KGEVkUboModels.cpp  KGEVkUniformBufferModels.cpp  KGEVkUniformBufferWorld.cpp
engine/core/src/graphic/VulkanWindowControl/: LinuxXCBWindowControl.cpp  MacOSWindowControl.cpp
engine/lib/: CMakeLists.txt
engine/lib/include/: KGEutilityl.h
engine/lib/scr/: KGEutilityl.cpp
engine/lib/scr/math/: matrix.cpp
shaders/: base.frag.spv  base.vert.spv  comlile.sh  compile.bat  frag.spv  vert.spv
test/: CMakeLists.txt
